--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
+    "remark-gfm": "^4.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
