--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notes-frontend",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://localhost:3000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +19,7 @@
     "@mui/material": "^7.2.0",
     "@phosphor-icons/react": "^2.1.10",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
